export const snapshot = {};

snapshot[`typegraphs creation 1`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "test": 1
        },
        "required": [
          "test"
        ]
      },
      {
        "type": "function",
        "title": "func_20",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 20,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "ComplexType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 15,
          "an_email": 19
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_5",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "string_7",
        "runtime": 0,
        "policies": [],
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_8",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1",
          "2"
        ],
        "config": {
          "key": "value"
        },
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1.5",
          "2.5"
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_11",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "value": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_10",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_16",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 11,
        "default_value": null
      },
      {
        "type": "array",
        "title": "array_15",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 12
      },
      {
        "type": "either",
        "title": "either_14",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "oneOf": [
          13,
          14
        ]
      },
      {
        "type": "string",
        "title": "string_12",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_13",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "SomeType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 16,
          "two": 18
        },
        "required": []
      },
      {
        "type": "array",
        "title": "Two",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 17,
        "minItems": 3
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "_3_SomeType?",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 15,
        "default_value": null
      },
      {
        "type": "string",
        "title": "string_17",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "boolean_19",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>true;"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [
          "*"
        ],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [
          "GET"
        ],
        "allow_credentials": false,
        "max_age_sec": 120
      },
      "auths": [
        {
          "name": "basic",
          "protocol": "basic",
          "auth_data": {
            "users": [
              "testBasicAuth"
            ]
          }
        },
        {
          "name": "testHmacAuth",
          "protocol": "jwt",
          "auth_data": {
            "format": "raw",
            "algorithm": {
              "name": "HMAC",
              "hash": {
                "name": "SHA-256"
              }
            }
          }
        }
      ],
      "rate": {
        "window_limit": 128,
        "window_sec": 60,
        "query_limit": 8,
        "context_identifier": "user",
        "local_excess": 5
      },
      "version": "0.0.2"
    }
  }
]'
`;

snapshot[`typegraphs creation 2`] = `
\`[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "add": 1,
          "multiply": 6
        },
        "required": [
          "add",
          "multiply"
        ]
      },
      {
        "type": "function",
        "title": "func_4",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 3,
          "second": 4
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_3",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_10",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 10,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_8",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 8,
          "second": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "sha256_ca4c84007bbe1e2253363df3d2da8605fc21e36c4c280cbb335b7daf5ce0dc73",
          "fn": "(lambda x: (x['first'] + x['second']))"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=({first,second})=>first*second;"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python_wasi",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.2"
    }
  }
]\`
`;

snapshot[`typegraphs creation 3`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 1,
          "two": 6,
          "three": 11
        },
        "required": [
          "one",
          "two",
          "three"
        ]
      },
      {
        "type": "function",
        "title": "func_10",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a": 3,
          "b": 4
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "integer_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "func_12",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 9,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "User",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 8,
          "post": 9
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "Post",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 10,
          "author": 7
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_14",
        "runtime": 0,
        "policies": [
          2
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 2,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>12;"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=user=>({id:12,user});"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>false;"
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+1Y727bNhD3Zz0FoX6ROkWx5SQdvKnY1nZdgQYL0mwYEAQCLdG2UEnUSGqxZ/hN9jZ7sR1JWf9sx+mWBGvhA2yJPPJ4dzz+dLyQpnlC5m6+6D0a9YHOTk7UE6j7HHov+r1B/+Rs0Pf63lD2DwbeYNjr956ACi4wQ6j3X6lr3GdCz9Armi9YPJ0JdE4EFoucoJ///stBSRySjJMIFVlEGBIzgs7pn3GSYHRRjIGL3usR6FfCeEwz5Ll913iGPly8/u2o5B29i0gm4klM2AidX7w/gjGGMWE0RXKlKcP5LMjIXKA4zSkTSDg1Y9s4V726OWY45etJ3xdi5oAhjDvoEgtyx8Sqcz337c6VcgpGLtbjLlRr60BWgIkp4S7YStfjX8P7pWYYBqcpuZKe9ZFwuWBFKCwDAS3VvySTZsQcARszhheWcONMkClhlu2gNM78oYMynBLfvLqlpu3U8wS05TyaC9gEnMDUnNH5wjI/lKuadjl+pR9aTsV1DNswQo0D+5TEATDibKpW1K9WUxkcTBKKhWKrN0vqPnD7YESRiBjWCOjEhyhozcoCkhWpmiVfrGvlDUcbd9MZWjqmnrL2lOwgDEs3+NcDB3k3DgppNomn/tL8SBYw2PwDJwUxV1t0ruVpxdvS3FOQ5562dQm0l9bOkA5blivUcuzWYhnhgkStjSYxnC1mXTcc2jDKvrHtem83RQW3MD1gZAIy12HWcW2K40T7Vr5Z24LhVb39Oh6M76og10EQwuny5RGzKuE4SehtEDKizjhOuP8j/DVW1wNmBAOAcP/6pstJiZjRCDjm2zdX5gabAixB9Fybz5s8Ms8pJ1ulpnge4CkJOAn9gdfXjNJcDBgBoyVUuGPM4xCCTIAHf5DvslfGmUISd5bi0Ds9sxT/J2gotl0uBCFBfIkytSNu4ywCfeWyZ32n253EaSxAn69rzu8FYYuS0ehOaIiTgMxDwrl/WvdDEAsAmiCuwNQ3C06YWVloGxGZIKlvUJ7kQO4ft6YjjXD2SA1VCOU3wcmyFSMvxtCvQc7NFb4DR7GmrnZ5ba9cx5ei3EmRhXW/1rWKJKfFEO6Y0oTgrBnEekYEEWjZyH+J4BARs2bbropujcQWqFVOtY3egR6EKlSuPmIPnwnuyf8Gp8ON/G849LxD/vcEdM9UzHnQPClfAO5n1QzVWudK/y7Ban6uGli4Ed1dPNRItwX57gZLrb/fVn03XuIo8sUWrGynWU1abvRIMicx483kqoOk1Tj4EtEsunvgqtVjd8F66zxtuCv3KEhwOo6wpR9oPkLz61K/G/SVbJRKNFOmDTyHZ4Ndbtdi17elkWVtemKb1av7mVV+gZZISXWQFoRW6pOk+tDzstO8lzGfz/eJhyzOBT8WM0aIK3jvEWgP/gPyD7v47w1PBgf8fwI6Pv6UAsCbBHPRuPmrGz+I2HnlLyfoa7+80rAJDgm6ktH2LssLoZBuPEJw2RoT9g00cN1YGYaEUgB7iQXyCoRUnEpUWCLsoDFajRrC5OFbQs9ynTGP0CWcWhZ9q29WDpjyMaO32Ut5+7FHanHcXLyhyUpxGREFy6rVpE69L4l4LNP1Ry3/7c3/zs5ebNT/+ienh/P/BPR/rv85ZVZ2V/K5PzXEqp5VlVOgGDdoVriWJoaMAU63OW4Vk1TdyoMMwjDGLQma4chig38yBLa8ibclxlFLlMxNICHU6QpUaizzQrbs1bqk94u8y4MkOWivJFnIoKyWpSdXsrTonRnxJ1cFdqfHCs6hKFWz1z27M2Eo6zWSOw5FurHTKgAMPLOdV61lNlI2KAo2hEj3O0i6rpIku5Q0SOniaITkdqldWtkd6a00UMksGSY0FrICqdWayMKWaRtb0mX1RdL66PALlF3yp3dEDQBRKY2KBNrdlOsulbTDu8seyh8HOtCBHoD+ASho2SUAHgAA"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.2"
    }
  }
]'
`;

snapshot[`typegraphs creation 4`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "test": 1
        },
        "required": [
          "test"
        ]
      },
      {
        "type": "function",
        "title": "func_20",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 20,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "ComplexType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 15,
          "an_email": 19
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_5",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "string_7",
        "runtime": 0,
        "policies": [],
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_8",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1",
          "2"
        ],
        "config": {
          "key": "value"
        },
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1.5",
          "2.5"
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_11",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "value": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_10",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_16",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 11,
        "default_value": null
      },
      {
        "type": "array",
        "title": "array_15",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 12
      },
      {
        "type": "either",
        "title": "either_14",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "oneOf": [
          13,
          14
        ]
      },
      {
        "type": "string",
        "title": "string_12",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_13",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "SomeType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 16,
          "two": 18
        },
        "required": []
      },
      {
        "type": "array",
        "title": "Two",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 17,
        "minItems": 3
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "_3_SomeType?",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 15,
        "default_value": null
      },
      {
        "type": "string",
        "title": "string_17",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "boolean_19",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>true;"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [
          "*"
        ],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [
          "GET"
        ],
        "allow_credentials": false,
        "max_age_sec": 120
      },
      "auths": [
        {
          "name": "basic",
          "protocol": "basic",
          "auth_data": {
            "users": [
              "testBasicAuth"
            ]
          }
        },
        {
          "name": "testHmacAuth",
          "protocol": "jwt",
          "auth_data": {
            "format": "raw",
            "algorithm": {
              "name": "HMAC",
              "hash": {
                "name": "SHA-256"
              }
            }
          }
        }
      ],
      "rate": {
        "window_limit": 128,
        "window_sec": 60,
        "query_limit": 8,
        "context_identifier": "user",
        "local_excess": 5
      },
      "version": "0.0.2"
    }
  }
]'
`;

snapshot[`typegraphs creation 5`] = `
\`[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "add": 1,
          "multiply": 6
        },
        "required": [
          "add",
          "multiply"
        ]
      },
      {
        "type": "function",
        "title": "func_4",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 3,
          "second": 4
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_3",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_10",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 10,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_8",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 8,
          "second": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "sha256_1ba371f8249eab0c77239207fa3c16506224b5c287f58aa5ff322450a6aee50d",
          "fn": "lambda x: x['first'] + x['second']"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=({first,second})=>first*second;"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python_wasi",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.2"
    }
  }
]\`
`;

snapshot[`typegraphs creation 6`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.2.json",
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 1,
          "two": 6,
          "three": 11
        },
        "required": [
          "one",
          "two",
          "three"
        ]
      },
      {
        "type": "function",
        "title": "func_9",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a": 3,
          "b": 4
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "integer_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "func_11",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 9,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "User",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 8,
          "post": 9
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "Post",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 10,
          "author": 7
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_13",
        "runtime": 0,
        "policies": [
          2
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 2,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>12;"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=user=>({id:12,user});"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>false;"
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+0Y7W7bNtC//RSE/lTuFMeSnWDQ1mJdW6wFOiRoMmBAYBi0RDtC9TWKmm0YepO9zV5sd0fqw06WZOgSrJ0PhkUd74tH3vF0QZbksVgPVdF7NBgBnE4m9ATYf47H40nPHU1O3ZE38saId13P9Xqj3hNAWSguGet9Luwv7guB42P2Oss3MlpeK/azUFxtcsHO/vzDYXEUiLQQISvTUEimrgV7G/NCRQH7oKeYNxwN+yDi4vzNr0cGefQ+FKmKFpGQfs1wBIR9JLw8e3PmsxJYoyTPpGIJz/tmuGXnGejcOEzBD8xYSp5fs4otZJYw64cGdQwKsuNCBsdJFsLJtb5rRbyBqY8l6E/EnZxS0xSE2ZPxqlR3q8255EmhufpBlhaKFVkiLtF1L5gaFkqWgbK3fcayVPiA4VLyja2GUarEUkh74ICeJEp9NmYVjlOeAKF1ucosVg0c4FSrDDmzXEVZymNgzmW23tjWhVFlDYCuy9xMgITGsEAH+G228Rm8ROnS12gY2aSZzxZxxhWiaWAbU12HJWWsIpB3tvCZZwzl6UykZYLk+JzZVxas2nKYBUuwpjWNWXpDW7tiyxAjJMd1+uwKtHhTcgrwMbA/XURg4pZ9EhtY5O88LnGFKLXqmtsIrm3eEzs8AcHDk2nDpT3hd3zCSHgrY2BoU1EoEXb3UUQQDtK+6jius6TBdDBoN64jYrYCvpkU4L36wNQeTHgUkwtxYO/t7Ot2E83mNqfSBn7tKUOrQNOR2fUjJCssh+YLEUihCvCFpYcu7pEeeu1wbE01PbgO5GnZjK2iNMxWFyLw2enI2UF+iJII/Oh639b430ohNwbdIOMs4PHbdSAKsOGkxsL+KrFW3aRhQX6QxujKMadAFq0tPI6z1WspiIfHMLOAf+F0p98JDlkLVzvdwUOOu85C8sJPby+t3ckzyIN40q+s5+2MWOdZIW6Rl/D1q6Ugl7jeaMdeDikEaQ0lZpThnBdRAMGBG/QjjhFr4qMhuk544J2c2kT1Dl6IyNCQZtJgLwfsxcs2RCDQMTtBhKdi1U2CNhyWliYv50Ci0+wQXuCJBESxHOqF2rWX0QKfxA4XZRrYBs26KcVpkGo4z7JY8NQetMhtM0KuEI+nTYZDwAnL6cyKxUJgMG6Z4hDtVoopBJIwLyA6Ni1lVQ8HQ4wlvRQblmK0VrReoIJn7wD3Qp3QZ/WF+AiV4D31n3viefv133jsuYf67wngKeu//1qdd76BqyD9R1JyYjGVX3sH60u3jqWjmhwu1U6ivjMFPySLGwFkgqHZWYJJ5XuJnIdUuXRTeKfisRaRLJTVqXl0IZCloXWzENLMNaFBGJ+g9z7wZB5y24rpydY+W189Iw3PpuwbfNGin03rK+1v0rhx5eaW++ffNX7b3EtbEuYwzV/RthGKPTc4q759bjUab57qi7t1ikBGuSqO1bUU4pG6APfkf8j84/38740nh/z/FPCk+R8qfbnggWCXeNrep3mpKDPOfQbfanMhMcvx9qXq9zGVQbLGBICfU4zOKX3zMO6wOav8jjAMw23lU1DTV4XPPkLkyvB7/ZXmwFI+pdkqfUkVov6g4F3lHUsqmoUPolKmjTa0qfc1QRFhLf+o7b/74t+DcL/R/xt5k0P8PwH8D+s/0xjj1A5rWjZtJ8/d6ZNR4O/2q3QzDNtf3UbbfEdeQ+Vgm8Bnk3GXFhsc+924KOxqoZICqjjqT5nG3zm8WnudoV+wVdIVjTwPEI0NikxSK1buSiQt+00mXeCabtLNovYBVevdZS9dDdAsa2lqzO1FLbVV29KwgKbh3GnaDTutBterW0k7ZVst31SC1G1tBZJbyJc3peIcSYZNRs/iHtOGVoNbNZHUXI8teNlgr03bRm0r6uOSDXiRGSv0Qa9rXljfjVGzYcQGMiFIyhgR+zXd11i3HuAABzjAAT4P/gLoXEMSACAAAA=="
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.2"
    }
  }
]'
`;
